fix: Center-align all project site hero units text

--- a/_sass/open-project-header-footer.scss
+++ b/_sass/open-project-header-footer.scss
@@ -153,7 +153,7 @@ body > .underlay > footer {
     }
   }
 
-  body.project.layout-home > & {
+  body.project > & {
     > .hero {
       text-align: center;
 
